--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -1,11 +1,10 @@
 {
     "dev": {
-        "app_function": "app.app",
-        "aws_region": "us-east-2",
-        "profile_name": "default",
-        "project_name": "clinical-rheuma",
-        "runtime": "python3.6",
-        "s3_bucket": "zappa-w9uorz93j",
-	"keep_warm": false
+        "app_function": "app.app", 
+        "aws_region": "us-east-2", 
+        "profile_name": "default", 
+        "project_name": "clinical-rheuma", 
+        "runtime": "python2.7", 
+        "s3_bucket": "zappa-n3d5aazz5"
     }
 }
